@@ -4797,12 +4797,12 @@ var Box = (function(){
     getContent : function(){
       return this.content || null;
     },
-    getEvents : function(){
-      // events of anonymous line is already captured by parent element.
+    getOnCreate : function(){
+      // on create of anonymous line is already captured by parent element.
       if(this.isAnonymousLine()){
-	return {};
+	return null;
       }
-      return this.style.getCssAttr("events") || {};
+      return this.style.getCssAttr("oncreate");
     },
     getAttrs : function(){
       // attributes of anonymous line is already captured by parent element.
@@ -6835,8 +6835,8 @@ var StyleContext = (function(){
       return this.markup.getAttr(name, def_value);
     },
     _evalCssAttr : function(name, value){
-      if(name === "events"){
-	return value; // function set, so return as it is.
+      if(name === "oncreate"){
+	return value; // special callback function(called when layout tree is evaluated), so return as it is.
       }
       // if value is function, call it with style-context(this),
       // and need to format because it's thunk object and not initialized yet.
@@ -9082,27 +9082,12 @@ var DocumentGenerator = (function(){
 var LayoutEvaluator = (function(){
   function LayoutEvaluator(){}
 
-  var __add_event = (function(){
-    if(document.addEventListener){
-      return function(node, type, handler){
-	node.addEventListener(type, handler, false);
-      };
-    } else if(document.attachEvent){
-      return function(node, type, handler){
-	node.attachEvent('on' + type, function(evt){
-          handler.call(node, evt);
-	});
-      };
-    }
-  })();
-
   LayoutEvaluator.prototype = {
     _createElement : function(name, opt){
       var opt = opt || {};
       var styles = opt.styles || {};
       var attrs = opt.attrs? opt.attrs.attrs : {};
       var dataset = opt.attrs? opt.attrs.dataset : {};
-      var events = opt.events || {};
       var dom = document.createElement(name);
       if(opt.id){
 	dom.id = opt.id;
@@ -9137,11 +9122,11 @@ var LayoutEvaluator = (function(){
       // dataset attributes(defined in TagAttrs::dataset)
       Args.copy(dom.dataset, dataset);
 
-      Obj.iter(events, function(event_name, fn){
-	__add_event(dom, event_name, function(e){
-	  return fn(e || event);
-	});
-      });
+      // call oncreate callback if exists.
+      if(opt.oncreate){
+	console.log("fn:%o", opt.oncreate);
+	opt.oncreate(dom);
+      }
       return dom;
     },
     _createClearFix : function(clear){
@@ -9176,7 +9161,7 @@ var LayoutEvaluator = (function(){
       return this._createElement(opt.name || "div", {
 	className:tree.getClassName(),
 	attrs:tree.getAttrs(),
-	events:tree.getEvents(),
+	oncreate:tree.getOnCreate(),
 	content:(opt.content || tree.getContent()),
 	styles:(opt.css || tree.getCssRoot())
       });
