@@ -1,36 +1,18 @@
 var TestStyles = {
-  ".nehan-test-hoge":{
-    onload:function(context){
-      var markup = context.getMarkup();
-      markup.setContent(markup.getContent() + "う");
-    }
-  },
   "tip":{
     display:"inline",
     color:"red",
     background:"gold",
-    events:{
-      mouseover:function(event){
-	var $target = $(event.target);
-	$target.css("font-weight", "bold");
-      },
-      mouseout:function(event){
-	var $target = $(event.target);
-	$target.css("font-weight", "normal");
-      },
-      click:function(event){
-	var $target = $(event.target);
-	var tip_content = $target.data("content");
-	if(tip_content){
-	  alert(tip_content);
-	}
-	return false;
-      }
+    oncreate:function(dom){
+      $(dom).click(function(){
+	console.log($(this).data("content"));
+      });
     },
     onload:function(context){
       var markup = context.getMarkup();
       var tip_title = markup.getAttr("title");
       var tip_content = markup.getContent();
+      //markup.setAlias("a");
       markup.setData("title", tip_title);
       markup.setData("content", tip_content);
       markup.setContent(tip_title);
